--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node authentication api using clean architecture principles.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --no-cache --watchAll"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,11 @@
     "url": "https://github.com/JonathanBEugenio/clean-auth-api/issues"
   },
   "homepage": "https://github.com/JonathanBEugenio/clean-auth-api#readme",
+  "standard": {
+    "env": [
+      "jest"
+    ]
+  },
   "lint-staged": {
     "*.js": [
       "standard --fix",
@@ -29,6 +34,7 @@
     }
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "husky": "^4.3.7",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
