--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --no-cache --watchAll",
-    "test:staged": "jest"
+    "test:staged": "jest -passWithNoTests"
   },
   "repository": {
     "type": "git",
